# codewars-square-sums

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
src/: batch.sh  hamiltonian.cpp  hamiltonian.h  manager.py
